# sernet

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  dst.c  dst.h  fwd.c  fwd.h  fwd.sh  hosts  local.h  main.c  msg.h  osc.c  osc.h  osc.sh  packet.c  packet.h  relay.c  run.sh  serial-dump.py  serial-relay.py  serial.c  serial.h  sernet.yucc  sernet.yuck  src.c  src.h  src.sh  test.sh  tmux.sh  udp.c  udp.h
osc/: tinyosc.c
